{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 10,
  "lineage": "5f595edb-c574-0640-2b0d-0225de8d2f31",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkInterfaces/NextopsVM-nic",
            "internal_domain_name_suffix": "44bkynyzylnupctdfpzbmixb1a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "NextopsVM-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "Nextopsvideos"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1",
            "location": "eastus",
            "name": "Nextops-nsg1",
            "resource_group_name": "Nextopsvideos",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "Nextops-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Nextopsvideos",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "Nextopsvideos",
            "virtual_network_name": "NextopsVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1",
            "subnet_id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "37ac82f7-c219-47db-8a63-2bf21622e1d8",
            "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet",
            "location": "eastus",
            "name": "NextopsVnet",
            "resource_group_name": "Nextopsvideos",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/eac39c23-7271-422a-83d8-308404262b6f/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/NextopsVnet/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}